--- a/app/views/pages/worldmap_page.html.erb
+++ b/app/views/pages/worldmap_page.html.erb
@@ -27,6 +27,7 @@
      /*unerlässlich*/
     #map {
       height: 100%;
+
     }
 
     #infowindow-content .title {
@@ -50,18 +51,19 @@
     }
 
     #pac-input {
+      margin-left: -2%;
+      margin-right: 1.5%;
       background-color: #fff;
       font-family: "Segoe UI Light";
       font-size: 17px;
       font-weight: 300;
-      margin-left: 12px;
       padding: 0 11px 0 13px;
       text-overflow: ellipsis;
       width: 400px;
-      border-radius: 10px;
+      border-radius: 30px;
       border-style: solid;
       border-color: white;
-      margin-top: 1%;
+      z-index: 4;
     }
 
     #pac-input:focus {
@@ -71,7 +73,57 @@
     }
 
 
+      #oberesSuchfeld{
+        padding-top: 0.25%;
+        padding-bottom: 0.25%;
+        padding-left: 1%;
+        padding-right: 1%;
+        border-radius: 0% 0% 20px 20px;
+        position: fixed;
+        font-family: "Segoe UI Light" !important;
+        width: 65%;
+        top: 0%;
+        margin-left: 16%;
+        height: 3%;
+        color: #ffffff;
+        text-align: center; font-style: normal; font-size: 14.5pt;
+        background: rgba(0,0,0, .6);
+        z-index: 3;
+      }
 
+      #pac-input2{
+        margin-left: 1.5%;
+        background-color: #fff;
+        font-family: "Segoe UI Light";
+        font-size: 17px;
+        font-weight: 300;
+        padding: 0 11px 0 13px;
+        text-overflow: ellipsis;
+
+        border-radius: 30px;
+        border-style: solid;
+        border-color: white;
+        z-index: 4;
+      }
+
+    #arztcombo{
+      margin-left: 1.5%;
+      background-color: #fff;
+      font-family: "Segoe UI Light";
+      font-size: 17px;
+      font-weight: 300;
+      padding: 0 11px 0 13px;
+      text-overflow: ellipsis;
+
+      border-radius: 30px;
+      border-style: solid;
+      border-color: white;
+      z-index: 4;
+    }
+
+      #rButton1{
+       margin-left: 1.5%;
+      }
 
   </style>
 
@@ -85,15 +137,62 @@
 
 <div id="MapFenster">
 
+  <div id="oberesSuchfeld">
+    <input id="pac-input" class="controls" type="text"
+           placeholder="Zieleingabe">
 
-  <input id="pac-input" class="controls" type="text"
-         placeholder="Zieleingabe">
+    <input id="rButton" type="radio" name="hospital" value="Krankenhaus"> Krankenhaus
+        <input id="rButton1" type="radio" name="aerzte" value="Ärzte"> Arzt
+
+    <select id="arztcombo" onchange=getAt()>
+      <option>Alle Fachrichtungen</option>
+      <option>Allgemeinmedizin</option>
+      <option>Anästhesiologe</option>
+      <option>Augenheilkunde</option>
+      <option>Chirugie</option>
+      <option>Frauenheilkunde & Geburtshilfe</option>
+      <option>Hals-Nasen-Ohrenheilkunde</option>
+      <option>Haut- & Geschlechtskrankheiten</option>
+      <option>Humangenetik</option>
+      <option>Innere Medizin</option>
+      <option>Kinder- & Jugendpsychotherapie</option>
+      <option>Kinder- & Jugendpsychatrie</option>
+      <option>Kinderheilkunde</option>
+      <option>Laboratoriumsmedizin</option>
+      <option>Logopädie</option>
+      <option>Mikrobiologie und Infektionsepidemiologie</option>
+      <option>Mund-Kiefer-Gesichtschirugie</option>
+      <option>Nervenheilkunde / Neurologie</option>
+      <option>Neurochirugie</option>
+      <option>Nuklearmedizin</option>
+      <option>Orthopädie</option>
+      <option>Phoniatrie / Pädaudologie</option>
+      <option>Physikalische & Rehabilitative Medizin</option>
+      <option>Psychatrie</option>
+      <option>Psychologische Psychotherapie</option>
+      <option>Psychosomatische Medizin</option>
+      <option>Radiologie</option>
+      <option>Urologie</option>
+      <option>Zahnärzte</option>
+    </select>
+
+    <select id="pac-input2">
+      <option>egal</option>
+      <option>< 5   km</option>
+      <option>< 10  km</option>
+      <option>< 25  km</option>
+      <option>< 50  km</option>
+      <option>< 100 km</option>
+    </select>
+  </div>
+
   <div id="map"></div>
   <div id="infowindow-content">
     <span id="place-name"  class="title"></span><br>
     Place ID <span id="place-id"></span><br>
     <span id="place-address"></span>
   </div>
+
 
   <script>
       // This sample uses the Place Autocomplete widget requesting only a place
@@ -105,21 +204,279 @@
       // This example requires the Places library. Include the libraries=places
       // parameter when you first load the API. For example:
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZLMhUcGgyrPcMynUS21Tq4IdYXTRJXeY&libraries=geometry,places,visualization";
+      src="https://www.gstatic.com/charts/loader.js";
+      src="http://www.google.com/jsapi";
 
       function initMap() {
-          var map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: 52.138949, lng: 11.645445},
-              zoom: 9
-          });
 
+          var map;
+
+          if(new Date().getHours() > 6 && new Date().getHours() < 23) {
+
+              map = new google.maps.Map(document.getElementById('map'), {
+                  mapTypeControl: false,
+                  zoom: 17,
+
+              });
+          }
+
+          else {
+
+               map = new google.maps.Map(document.getElementById('map'), {
+                  mapTypeControl: false,
+                  zoom: 17,
+                   styles: [
+                       {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
+                       {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
+                       {elementType: 'labels.text.fill', stylers: [{color: '#746855'}]},
+                       {
+                           featureType: 'administrative.locality',
+                           elementType: 'labels.text.fill',
+                           stylers: [{color: '#d59563'}]
+                       },
+                       {
+                           featureType: 'poi',
+                           elementType: 'labels.text.fill',
+                           stylers: [{color: '#d59563'}]
+                       },
+                       {
+                           featureType: 'poi.park',
+                           elementType: 'geometry',
+                           stylers: [{color: '#263c3f'}]
+                       },
+                       {
+                           featureType: 'poi.park',
+                           elementType: 'labels.text.fill',
+                           stylers: [{color: '#6b9a76'}]
+                       },
+                       {
+                           featureType: 'road',
+                           elementType: 'geometry',
+                           stylers: [{color: '#38414e'}]
+                       },
+                       {
+                           featureType: 'road',
+                           elementType: 'geometry.stroke',
+                           stylers: [{color: '#212a37'}]
+                       },
+                       {
+                           featureType: 'road',
+                           elementType: 'labels.text.fill',
+                           stylers: [{color: '#9ca5b3'}]
+                       },
+                       {
+                           featureType: 'road.highway',
+                           elementType: 'geometry',
+                           stylers: [{color: '#746855'}]
+                       },
+                       {
+                           featureType: 'road.highway',
+                           elementType: 'geometry.stroke',
+                           stylers: [{color: '#1f2835'}]
+                       },
+                       {
+                           featureType: 'road.highway',
+                           elementType: 'labels.text.fill',
+                           stylers: [{color: '#f3d19c'}]
+                       },
+                       {
+                           featureType: 'transit',
+                           elementType: 'geometry',
+                           stylers: [{color: '#2f3948'}]
+                       },
+                       {
+                           featureType: 'transit.station',
+                           elementType: 'labels.text.fill',
+                           stylers: [{color: '#d59563'}]
+                       },
+                       {
+                           featureType: 'water',
+                           elementType: 'geometry',
+                           stylers: [{color: '#17263c'}]
+                       },
+                       {
+                           featureType: 'water',
+                           elementType: 'labels.text.fill',
+                           stylers: [{color: '#515c6d'}]
+                       },
+                       {
+                           featureType: 'water',
+                           elementType: 'labels.text.stroke',
+                           stylers: [{color: '#17263c'}]
+                       }
+                   ]
+              });
+
+          }
+
+
+          if (navigator.geolocation) {
+              navigator.geolocation.getCurrentPosition(function (position){
+                  var pos ={
+                      lat: position.coords.latitude,
+                      lng: position.coords.longitude
+                  };
+
+
+                  map.setCenter(pos);
+
+                  var myPosition = new google.maps.Marker({
+                      position: pos,
+                      title: 'Sie sind hier',
+                      map: map
+                  });
+              });
+          }
 
           var input = document.getElementById('pac-input');
+
+          var aTyp = document.getElementById('arztcombo');
+
+
+          aTyp.addEventListener("change", suche);
+
+          var markers = [];
+
+          // ertsellt Marker für jeden gewuenschten Arzt auf der Karte
+          function suche() {
+
+
+
+              if(markers.length > 0) {
+
+                  for (var i = 0; i < markers.length; i++) {
+                      markers[i].setMap(null);
+                  }
+
+                  markers = [];
+              }
+
+              //var s = "Fachbereich=\'" + aTyp.value + "'";
+
+              var s = aTyp.value;
+
+           //   var query = "SELECT * FROM 1ndijBYhlNzs-voaZF9aijLW_7Q5khq9ZgyujxkTA WHERE " + s;
+
+              //query = encodeURIComponent(query);
+
+
+            var list = getDoctor(s);
+
+              /*
+              $.getJSON("https://docs.google.com/spreadsheets/d/1j5A4oU3wljStoUJvo65qbX2WK4FRgjvH02h3EfYf8Ww/gviz/tq?tq=")
+              google.charts.load('current', {
+                callback: function () {
+
+                    window.alert("hello");
+
+                    var gVizQuery = new google.visualization.Query('https://docs.google.com/spreadsheets/d/1j5A4oU3wljStoUJvo65qbX2WK4FRgjvH02h3EfYf8Ww/gviz/tq?tq=');
+
+
+
+                    gVizQuery.setQuery('select * where E=\'' + s + '\'');
+
+                    //select%20*%20where%20Fachbereich%3D'Allgemeinmedizin'
+*/
+
+                    var createMarker = function(coordinate, name, ort, strasse,tel, fachbereich){
+
+                       var image = {
+                            url: "https://upload.wikimedia.org/wikipedia/en/b/b5/Wireless-icon.png",
+                            // This marker is 20 pixels wide by 32 pixels high.
+                            size: new google.maps.Size(30, 37),
+                            // The origin for this image is (0, 0).
+                            origin: new google.maps.Point(0, 0),
+                            // The anchor for this image is the base of the flagpole at (0, 32).
+                            anchor: new google.maps.Point(0, 37)
+                        };
+
+                        var m = new google.maps.Marker({
+                            map: map,
+                            position: coordinate,
+                            icon : 'https://i.ibb.co/SrJdfkt/doctor-icon.png'
+                        });
+
+                        markers.push(m);
+
+                        google.maps.event.addListener(m, "click", function () {
+
+                            var image = { url: 'https://i.ibb.co/NtVCxDY/bildDoc.png'};
+
+                            var infowindow0 = new google.maps.InfoWindow();
+                            infowindow0.setPosition(coordinate);
+                           /* infowindow0.setContent("<div style='float:'><img src='https://i.ibb.co/NtVCxDY/bildDoc.png'></div>" + "<div> </br>  'Name: '  </br> name  <br>
+                                <br>  'Ort: '    </br> ort  ,  strasse <br> +
+                                <br> Telefonnummer: </br>  tel  <br>
+                                <br> Fachbereich: </br> fachbereich  </div>);
+                            infowindow0.open(map, m);
+*/
+                        });
+                    };
+
+
+
+                        for(var i=0; i < list.length; i++){
+                            var lat = list[i][5];
+                            var lng = list[i][6];
+                            var coordinate = new google.maps.LatLng(lat, lng);
+                            var name = list[i][0];
+                            var ort = list[i][1];
+                            var strasse = list[i][2];
+                            var tel = list[i][3];
+                            var fachbereich = list[i][4];
+
+                            createMarker(coordinate, name, ort, strasse, tel, fachbereich);
+                        }
+
+
+
+
+              /*layer1 = new google.maps.FusionTablesLayer({
+                  query: {
+                      select: '\'Geocodable address\'',
+                      from: '1ndijBYhlNzs-voaZF9aijLW_7Q5khq9ZgyujxkTA',
+                      where: s,
+                  },
+
+              });
+
+              google.maps.event.addListener(layer1, 'change', function (e) {
+                  var pos2 = {lat: parseFloat(e.row['lat'].value) , lng: parseFloat(e.row['lng'].value)};
+
+                  // var z = parseFloat(e.row['lat'].value);
+
+
+                  var marker = new google.maps.Marker({position:pos2, map: map, title:"test"});
+
+              });
+
+
+              layer1.setMap(map);
+
+              Gestaltung des Info-Fensters für Aerzte
+              google.maps.event.addListener(layer1, 'click', function (e) {
+
+                 var pos2 = {lat: parseFloat(e.row['lat'].value) , lng: parseFloat(e.row['lng'].value)};
+
+                 // var z = parseFloat(e.row['lat'].value);
+
+
+                 var marker = new google.maps.Marker({position:pos2, map: map, title:"test"});
+
+                 // window.alert( z);
+
+                  e.infoWindowHtml = "<b>" + 'Name: ' + "</b>" + e.row['Name'].value +  "<br>" +
+                      "<b>" + "Ort: " + "</b>" + e.row['Ort'].value + " , " + e.row['Straße'].value + "<br>" +
+                      "<b>" + "Telefonnummer: " + "</b>" +  e.row['Telefonnummer'].value + "<br>" +
+                      "<b>" + "Fachbereich: " + "</b>" + e.row['Fachbereich'].value
+              })
+                  */
+          }
+
 
           var autocomplete = new google.maps.places.Autocomplete(
               input, {placeIdOnly: true});
           autocomplete.bindTo('bounds', map);
-
-          map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
 
           var infowindow = new google.maps.InfoWindow();
           var infowindowContent = document.getElementById('infowindow-content');
@@ -161,7 +518,6 @@
               });
           });
 
-
           var layer = new google.maps.FusionTablesLayer({
               query: {
                   select: 'geometry',
@@ -191,9 +547,46 @@
           });
           layer.setMap(map);
 
+/*
+          var layer1 = new google.maps.FusionTablesLayer();
+
+               layer1 = new google.maps.FusionTablesLayer({
+                  query: {
+                      select: '\'Geocodable address\'',
+                      from: '1ndijBYhlNzs-voaZF9aijLW_7Q5khq9ZgyujxkTA',
+
+                  }
+
+              });*/
 
 
-          /* neues Info-Fenster */
+
+               /*
+              if( document.getElementById("pac-input2").options[document.getElementById("pac-input2").selectedIndex].text !== "Alle Fachrichtungen") {
+
+                  layer1 = new google.maps.FusionTablesLayer({
+                      query: {
+                          select: '\'Geocodable address\'',
+                          from: '1ndijBYhlNzs-voaZF9aijLW_7Q5khq9ZgyujxkTA',
+
+                      }
+
+                  });
+
+              }*/
+
+
+
+
+
+          var infowindow1 = new google.maps.InfoWindow();
+          var infowindowContent1 = document.getElementById('googft-info-window');
+          infowindow1.setContent(infowindowContent1);
+
+
+
+
+              /* neues Info-Fenster */
           google.maps.event.addListener(layer, 'click', function(e) {
 
               // Change the content of the InfoWindow
@@ -205,12 +598,10 @@
 
 
       }
+
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZLMhUcGgyrPcMynUS21Tq4IdYXTRJXeY&libraries=places&callback=initMap"
           async defer></script>
-
-
-
 
 
   <%= render partial: 'pages/newsline'%>
@@ -268,6 +659,36 @@
     </div>
 
     -->
+
+  <script>
+   function getDoctor(type) {
+
+          var list = [];
+
+
+         if (type == "Allgemeinmedizin") {
+
+              var d0 = ['Fischer, Jasmin', '39104 Magdeburg', 'Am Krökentor 1A', '0391 5616087', 'Allgemeinmedizin', '52.137502', '11.637436'];
+              var d1 =['Dipl.-Med. Hollenbach Peggy','39104 Magdeburg'	,'Otto-von-Guericke-Str. 54a'	,'0391 59779124'	,'Allgemeinmedizin',	'52.121256', '11.627296'];
+              var d2 = ['Dr. Kudela Holger',	'39104 Magdeburg',	'Kleine Schulstr. 30',	'0391 5430020',	'Allgemeinmedizin',	'52.136290', '11.648124'];
+              var d3 =['Dr. Rother Jutta',	'39104 Magdeburg',	'Breiter Weg 122',	'0391 5619940',	'Allgemeinmedizin',	'52.134172', '11.637460'];
+              var d4 =    ['Dr. Gerchel Annett',	'39106 Magdeburg',	'Peter-Paul-Str. 32',	'0391 5611946',	'Allgemeinmedizin',	'52.144687', '11.651388'];
+              var d5 =    ['Dr. Heuer Marina',	'39108 Magdeburg','Liebknechtstr. 48',	'0391 7317416',	'Allgemeinmedizin',	'52.123751', '11.609135'];
+              var d6 =    ['Dipl.-Med. Impe Volkmar',	'39110 Magdeburg',	'Große Diesdorfer Str. 186',	'0391 7227336',	'Allgemeinmedizin',	'52.128650', '11.599872'];
+              var d7 =    ['Dr. Feilke Gudrun',	'39112 Magdeburg',	'Förderstedter Str. 30',	'0391 4019663',	'Allgemeinmedizin',	'52.107524', '11.617483'];
+              var d8 =    ['Dr. Padler Christine',	'39114 Magdeburg',	'Turmschanzenstr. 17',	'0391 831065',	'Allgemeinmedizin',	'52.128382', '11.655208'];
+              var d9 =    ['Dr. Günther Iris',	'39116 Magdeburg',	'Magdeburger Str. 9',	'0391 6312107',	'Allgemeinmedizin',	'52.088881', '11.575730'];
+              var d10 =    ['Dr. Steinicke Julia',	'39118 Magdeburg',	'Otto-Baer-Str. 2',	'0391 616513',	'Allgemeinmedizin',	'52.089821', '11.614672'];
+
+              list.push(d0,d1,d2,d3,d4,d5,d6,d7,d8,d9,d10);
+
+         }
+
+          return list;
+
+      }
+
+  </script>
 
 </div>
 </html>
