--- a/app/views/pages/worldmap_page.html.erb
+++ b/app/views/pages/worldmap_page.html.erb
@@ -148,36 +148,36 @@
     <input id="rButton1" type="radio" name="aerzte" value="Ärzte"> Arzt
 
     <select id="arztcombo">
-      <option selected></option>
-      <option>Alle Fachrichtungen</option>
-      <option>Allgemeinmedizin</option>
-      <option>Anästhesiologie</option>
-      <option>Augenheilkunde</option>
-      <option>Chirurgie</option>
-      <option>Frauenheilkunde & Geburtshilfe</option>
-      <option>Hals-Nasen-Ohrenheilkunde</option>
-      <option>Haut- & Geschlechtskrankheiten</option>
-      <option>Humangenetik</option>
-      <option>Innere Medizin</option>
-      <option>Kinder- & Jugendpsychotherapie</option>
-      <option>Kinder- & Jugendpsychatrie</option>
-      <option>Kinderheilkunde</option>
-      <option>Laboratoriumsmedizin</option>
-      <option>Logopädie</option>
-      <option>Mikrobiologie und Infektionsepidemiologie</option>
-      <option>Mund-Kiefer-Gesichtschirugie</option>
-      <option>Nervenheilkunde / Neurologie</option>
-      <option>Neurochirurgie</option>
-      <option>Nuklearmedizin</option>
-      <option>Orthopädie</option>
-      <option>Phoniatrie / Pädaudologie</option>
-      <option>Physikalische & Rehabilitative Medizin</option>
-      <option>Psychatrie</option>
-      <option>Psychologische Psychotherapie</option>
-      <option>Psychosomatische Medizin</option>
-      <option>Radiologie</option>
-      <option>Urologie</option>
-      <option>Zahnärzte</option>
+      <option value = null selected></option>
+      <option value="Alle Fachrichtungen">Alle Fachrichtungen</option>
+      <option value="Allgemeinmedizin">Allgemeinmedizin</option>
+      <option value="Anästhesiologie">Anästhesiologie</option>
+      <option value="Augenheilkunde">Augenheilkunde</option>
+      <option value="Chirurgie">Chirurgie</option>
+      <option value="Frauenheilkunde & Geburtshilfe">Frauenheilkunde & Geburtshilfe</option>
+      <option value="Hals-Nasen-Ohrenheilkunde">Hals-Nasen-Ohrenheilkunde</option>
+      <option value="Haut- & Geschlechtskrankheiten">Haut- & Geschlechtskrankheiten</option>
+      <option value="Humangenetik">Humangenetik</option>
+      <option value="Innere Medizin">Innere Medizin</option>
+      <option value="Kinder- & Jugendpsychotherapie">Kinder- & Jugendpsychotherapie</option>
+      <option value="Kinder- & Jugendpsychatrie">Kinder- & Jugendpsychatrie</option>
+      <option value="Kinderheilkunde">Kinderheilkunde</option>
+      <option value="Laboratoriumsmedizin">Laboratoriumsmedizin</option>
+      <option value="Logopädie">Logopädie</option>
+      <option value="Mikrobiologie und Infektionsepidemiologie">Mikrobiologie und Infektionsepidemiologie</option>
+      <option value="Mund-Kiefer-Gesichtschirurgie">Mund-Kiefer-Gesichtschirugie</option>
+      <option value="Nervenheilkunde / Neurologie">Nervenheilkunde / Neurologie</option>
+      <option value="Neurochirurgie">Neurochirurgie</option>
+      <option value="Nuklearmedizin">Nuklearmedizin</option>
+      <option value="Orthopädie">Orthopädie</option>
+      <option value="Phoniatrie / Pädaudologie">Phoniatrie / Pädaudologie</option>
+      <option value="Physikalische & Rehabilitative Medizin">Physikalische & Rehabilitative Medizin</option>
+      <option value="Psychatrie">Psychatrie</option>
+      <option value="Psychologische Psychotherapie">Psychologische Psychotherapie</option>
+      <option value="Psychosomatische Medizin">Psychosomatische Medizin</option>
+      <option value="Radiologie">Radiologie</option>
+      <option value="Urologie">Urologie</option>
+      <option value="Zahnärzte">Zahnärzte</option>
     </select>
 
     <select id="pac-input2" >
@@ -339,11 +339,11 @@
           }
 
           //DEFAULT_POS: FIN-OVGU
-          var pos = {lat: 52.138718, lng: 11.645646};
-          map.setCenter(pos);
+          var personPos = {lat: 52.138718, lng: 11.645646};
+          map.setCenter(personPos);
 
           var defaultPosition = new google.maps.Marker({
-              position: pos,
+              position: personPos,
               title: 'DEFAULT-Position: FIN-Ovgu',
               map: map
           });
@@ -354,22 +354,17 @@
 
               navigator.geolocation.getCurrentPosition(function (position){
 
-                     var pos = {
+                  personPos = {
                           lat: position.coords.latitude,
                           lng: position.coords.longitude
                       };
 
+                     defaultPosition.setMap(null);
 
-                  map.setCenter(pos);
+                  map.setCenter(personPos);
 
-                  var myPosition;
-
-                  if(myPosition != null) {
-
-                      myPosition = null;}
-
-                  myPosition = new google.maps.Marker({
-                      position: pos,
+                  defaultPosition = new google.maps.Marker({
+                      position: personPos,
                       title: 'Sie sind hier',
                       map: map
                   });
@@ -382,12 +377,13 @@
 
           var aTyp = document.getElementById('arztcombo');
 
-          var distance = document.getElementById('pac-input');
+          var distbox = document.getElementById("pac-input2");
+
 
 
           aTyp.addEventListener("change", suche);
 
-          distance.addEventListener("change", suche);
+          distbox.addEventListener("change", suche);
 
           var markers = [];
 
@@ -404,22 +400,28 @@
                   markers = [];
               }
 
-              var s = aTyp.value;
+              
+              function getDoctor(spec, dist) {
 
-              // FEHLEND: dist-Parameter, Auswahl des Types und Koordinate
+                    var distance = dist.value;
+                    var special = spec.value;
 
-              function getDoctor(type) {
+                  if (special != 'null' && special !='Alle Fachrichtungen' && distance == 'null'){ typus = 1;}
+                  else if(special == 'null' && distance != 'null' || special == 'Alle Fachrichtungen' && distance != 'null'){typus = 2;}
+                  else if(special != 'null' && distance != 'null'){ typus = 3;}
+                  else if(special == 'Alle Fachrichtungen' && distance == 'null'){ typus = 0;}
+                  else typus = 1;
 
-                  alert(distance);
+
 
                return $.ajax({
 
                       type: "POST",
                       url: "/map_entries/search",
-                      data: {search: {spec: type, dist: 0.5}, type: 3, coords: {x: 52.138718, y: 11.645646}},
+                      data: {search: {spec: special, dist: distance}, type: typus, coords: {x: personPos.lat, y: personPos.lng}},
                       success: function(data){
 
-                          alert(data);
+
                           var rueckgabeTupel = [];
                           var  list = JSON.parse(data);
 
@@ -460,7 +462,7 @@
 
                               markerString = '<div class="myTest">' + markerString + '</div>';
 
-                              alert("CONTENT" + markerString);
+
 
                               rueckgabeTupel.push([coordinate, markerString]);
                           };
@@ -570,7 +572,7 @@
                   });
               };
 
-              getDoctor(s, distance);
+              getDoctor(aTyp, distbox);
         }
 
 
