--- a/app/views/pages/impfpass_page.html.erb
+++ b/app/views/pages/impfpass_page.html.erb
@@ -20,10 +20,8 @@
     </div>
 
     <div id="comboBox">
-      <select id="impfKategorie">
-        <option value="Serum-Injektionen" >Serum-Injektionen </option>
-        <option value="Schutzimpfungen">Schutzimpfungen</option>
-      </select>
+      <%= select_tag options_for_select(VaccinationCard::ENTRY_TYPES.collect.with_index.to_a), id: "impfKategorie" %>
+
       <%= link_to "Impfkalender", '/vaccination_information', id: "link_to_vacc_information"%>
       <%= link_to "Impfung hinzufügen",  new_vaccination_card_path, id: "link_to_vacc_information"%>
     </div>
