--- a/app/views/vaccination_cards/_type.html.erb
+++ b/app/views/vaccination_cards/_type.html.erb
@@ -2,3 +2,4 @@
 
 <strong>Type: </strong>
 <%= f.select :injection_type, options_for_select(VaccinationCard::ENTRY_TYPES.collect.with_index.to_a, @vaccination_card.injection_type), @vaccination_card.injection_type ? {} : {prompt: '-- Select Entry type --'} %>
+<%= f.text_field :get_date , :id => "datepicker" %>
